# json-streamer

./: .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.ipynb  README.md  build_yajl.py  demo_v2_features.py  events.py  jsonstreamer.py  pyproject.toml  requirements.txt  sample.json  setup.py  statemachine.py
.github/workflows/: build-wheels.yml  test.yml
jsonstreamer/: __init__.py  __main__.py  events.py  jsonstreamer.py  tape.py
jsonstreamer/yajl/: parse.py  yajl_cffi.py
pyutils/: decorate.py  events.py  statemachine.py  testrunner.py
tests/: jsonstreamertests.py  test_error_handling.py  testbasic.py  testtape.py
tests/json_files/: arbit_1.json  nested_dict.json  on_element_multiple_parses.json  simple_object.json  space_preservation.json  spl_chars_in_value.json
